--- a/barber-shop-ui/src/app/Views/bookings/bookings.component.html
+++ b/barber-shop-ui/src/app/Views/bookings/bookings.component.html
@@ -1,6 +1,6 @@
 <div class="container text-center mt-3 p-3">
-  <div class="d-flex justify-content-between">
-    <div>
+  <div class="d-md-flex justify-content-between">
+    <div class="mb-2">
       <h1 class="page-title mb-0">Meus Agendamentos</h1>
     </div>
     <div>
@@ -32,11 +32,15 @@
         <th mat-header-cell *matHeaderCellDef>Preço</th>
         <td mat-cell *matCellDef="let element"> {{element.price / 10 | currency: 'BRL' }} </td>
       </ng-container>
+      <ng-container matColumnDef="isDone">
+        <th mat-header-cell *matHeaderCellDef>Status</th>
+        <td mat-cell *matCellDef="let element" [ngStyle]="{'color': element.isDone ? 'green' : 'red'}"> {{element.isDone ? 'Concluído' : 'Aguardando' }}</td>
+      </ng-container>
 
       <ng-container matColumnDef="options">
         <th mat-header-cell *matHeaderCellDef>Ações</th>
         <td mat-cell *matCellDef="let element">
-          <button class="btn btn-outline-danger bi bi-trash rounded-0" (click)="deleteBooking(element.bookingId)">Cancelar</button>
+          <button class="btn btn-outline-danger bi bi-trash rounded-0" [disabled]="element.isDone" (click)="deleteBooking(element.bookingId)">Cancelar</button>
         </td>
       </ng-container>
 
