feat: update label for time selection in booking handler

--- a/barber-shop-ui/src/app/Views/booking-handler/booking-handler.component.html
+++ b/barber-shop-ui/src/app/Views/booking-handler/booking-handler.component.html
@@ -17,7 +17,7 @@
                             <!-- SelectTime -->
                             <mat-form-field class="w-100" appearance="outline">
                                 <mat-label>{{availableHours.length == 0 ? 'Nenhum horário disponível':
-                                    'Data'}}</mat-label>
+                                    'Horário'}}</mat-label>
                                 <mat-select formControlName="time">
                                     <mat-option [value]="hour" *ngFor="let hour of availableHours">{{hour |
                                         time}}</mat-option>
