--- a/barber-shop-ui/src/app/Views/admin-barber-shop-services/admin-barber-shop-services.component.html
+++ b/barber-shop-ui/src/app/Views/admin-barber-shop-services/admin-barber-shop-services.component.html
@@ -13,6 +13,10 @@
         <th mat-header-cell *matHeaderCellDef>Serviço</th>
         <td mat-cell *matCellDef="let element" class="w-25"> {{element.name}} </td>
       </ng-container>
+      <ng-container matColumnDef="description">
+        <th mat-header-cell *matHeaderCellDef>Serviço</th>
+        <td mat-cell *matCellDef="let element" class="w-25"> {{element.description}} </td>
+      </ng-container>
 
       <ng-container matColumnDef="price">
         <th mat-header-cell *matHeaderCellDef>Preço</th>
