--- a/barber-shop-ui/src/app/Views/login/login.component.html
+++ b/barber-shop-ui/src/app/Views/login/login.component.html
@@ -1,9 +1,9 @@
-<div class="container">
-    <div class="row pt-5">
-        <div class="col-lg-7 d-flex justify-content-center align-items-center pe-5">
-            <img src="whiteLogo.svg" alt="barberShopLogo" class="img-fluid">
+<div class="container min-vh-100">
+    <div class="row pt-5 align-items-center min-vh-100">
+        <div class="col-lg-7 d-flex justify-content-center align-items-center pe-5 mb-4 mb-lg-0">
+            <img src="whiteLogo.svg" alt="barberShopLogo" class="img-fluid" width="400" height="300">
         </div>
-        <div class="col-lg-5 login-col py-5 align-self-baseline">
+        <div class="col-lg-5 login-col py-5">
             <h1 class="text-center text-light">Login</h1>
             <form class="d-flex flex-column align-items-center" [formGroup]="loginForm">
                 <mat-form-field class="w-75 mat-form-field mb-3">
