fix: update router link for 'Sobre' in navbar component

--- a/barber-shop-ui/src/app/Views/Shared/navbar/navbar.component.html
+++ b/barber-shop-ui/src/app/Views/Shared/navbar/navbar.component.html
@@ -8,7 +8,7 @@
       <a class="" routerLink="/agenda" routerLinkActive="active">Agenda</a>
     </div>
     <div class="col text-center order-md-3 col-md-2 col-lg-1">
-      <a class="" routerLink="/home">SOBRE</a>
+      <a class="" routerLink="/sobre">SOBRE</a>
     </div>
     <ng-container *ngIf="userName == ''">
       <div class="col text-center order-md-4 col-md-2 col-lg-1">
