fix: correct typo in project description on About page

--- a/barber-shop-ui/src/app/Views/about/about.component.html
+++ b/barber-shop-ui/src/app/Views/about/about.component.html
@@ -23,7 +23,7 @@
                 <h2>Sobre o projeto</h2>
                 <p class="text-start">
                     Este projeto foi desenvolvido como parte do bootcamp Decola Tech 2025, promovido pela Avanade em
-                    parceria com a DIO. O projeto tem como objetivo criar um sistema fullstack de getenciamento para uma
+                    parceria com a DIO. O projeto tem como objetivo criar um sistema fullstack de gerenciamento para uma
                     barbearia utilizando Spring Boot e Angular. O sistema permite o agendamento de horários,
                     gerenciamento de serviços e horários de funcionamento.
                 </p>
